--- a/assets/styles/components/_site-main.scss
+++ b/assets/styles/components/_site-main.scss
@@ -47,12 +47,16 @@
       padding: 0 30px;
 
       a {
+        transition: all .5s linear;
         display: inline-block;
         padding: 10px 20px;
-        border: 1px solid $blue-dark;
+        border: 1px solid $purple-dark;
         text-decoration: none;
         margin: 10px 0;
-        color: $blue-dark;
+        color: $purple-dark;
+        &:hover {
+          background-color: rgba($purple-dark, 0.2);
+        }
       }
     }
   }
