--- a/assets/styles/components/_site-main.scss
+++ b/assets/styles/components/_site-main.scss
@@ -36,15 +36,18 @@
 
     .page-header__title {
       text-align: center;
-      margin-bottom: 25px;
+      margin-bottom: 0;
     }
 
     .page-header__text {
       @extend .h3;
-      margin-bottom: 30px;
+      margin-bottom: 200px;
       text-align: center;
       font-weight: normal;
       padding: 0 30px;
+      p {
+        margin: 10px 0;
+      }
 
       a {
         transition: all .5s linear;
@@ -52,7 +55,7 @@
         padding: 10px 20px;
         border: 1px solid $purple-dark;
         text-decoration: none;
-        margin: 10px 0;
+        margin: 0;
         color: $purple-dark;
         &:hover {
           background-color: rgba($purple-dark, 0.2);
