--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -36,25 +36,22 @@
 .module-slides {
   max-width: 1200px;
   margin: 0 auto;
+  position: relative;
 
   &__slide {
-    width: $module-grid-image-width;
+    @include module-size;
     overflow: hidden;
-    //padding: 10px;
 
-    @include breakpoint($bp-desktop) {
-      height: $module-grid-image-height;
-
-      &:hover {
-        .module-slides__front {
-          transform: rotateY(180deg);
-        }
-        .module-slides__back {
-          transform: rotateY(0deg);
-          z-index: 2;
-        }
+    &:hover {
+      .module-slides__front {
+        transform: rotateY(180deg);
+      }
+      .module-slides__back {
+        transform: rotateY(0deg);
+        z-index: 2;
       }
     }
+
     .module-slides__front,
     .module-slides__back {
       background-color: rgba($blue, 0.9);
@@ -126,31 +123,6 @@
     }
   }
 
-  &__overlay {
-    display: none;
-    @include breakpoint($bp-desktop) {
-      //background-color: rgba(black, 0.2);
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      display: block;
-    }
-  }
-
-  &__learn-more {
-    display: none;
-    @include breakpoint($bp-desktop) {
-      @include rem(font-size, 15px);
-      font-weight: 400;
-      display: block;
-      text-align: center;
-      z-index: 5;
-      color: white;
-    }
-  }
-
   &__feature {
     @include rem(font-size, 14px);
     display: block;
@@ -159,9 +131,8 @@
 
   &__image {
     display: none;
+    @include module-size;
     @include breakpoint($bp-desktop) {
-      width: $module-grid-image-width;
-      height: $module-grid-image-height;
       display: block;
       position: absolute;
       top: 0;
@@ -180,8 +151,6 @@
     perspective: 1000;
     position: relative;
     overflow: hidden;
-
-
   }
 
   &__icon {
@@ -189,47 +158,37 @@
   }
 
   &__front {
-    //width: $module-grid-image-width - 20px;
-    width: $module-grid-image-width;
+    @include module-size;
+    width: 100% !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 25px 0;
-    @include breakpoint($bp-desktop) {
-      //height: $module-grid-image-height - 20px;
-      height: $module-grid-image-height;
-      transition: all 0.4s;
-      transform: rotateY(0deg);
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 2;
-      padding: 0;
-    }
+    transition: all 0.4s;
+    transform: rotateY(0deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    padding: 0;
   }
 
   &__back {
+    @include module-size;
+    width: 100% !important;
     color: white;
     padding: 0 10px 10px;
     text-align: center;
-    //width: $module-grid-image-width - 20px;
-    width: $module-grid-image-width;
-
-    @include breakpoint($bp-desktop) {
-      //height: $module-grid-image-height - 20px;
-      height: $module-grid-image-height;
-      transition: all 0.5s;
-      transform: rotateY(-180deg);
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding-top: 10px;
-      opacity: 0;
-    }
+    transition: all 0.5s;
+    transform: rotateY(-180deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 10px;
+    opacity: 0;
   }
 
 
@@ -250,21 +209,30 @@
 }
 
 .module-filters {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 5px 10px;
   text-align: center;
+  margin: 15px 0 0;
+  padding: 0;
   li {
     padding: 5px 20px;
+    margin: 5px;
     list-style-type: none;
-    display: inline-block;
-    margin: 5px 10px 5px 0;
     font-weight: bold;
     transition: all .5s ease-in-out;
     background-color: #ccc;
     cursor: pointer;
     &:hover {
       background-color: #bbb;
+    }
+  }
+
+  @include breakpoint($bp-medium) {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5px 10px;
+
+    li {
+      display: inline-block;
+      margin: 5px 10px 5px 0;
     }
   }
 }
