--- a/assets/styles/base/_mixins.scss
+++ b/assets/styles/base/_mixins.scss
@@ -106,3 +106,28 @@
     @include element-invisible-off;
   }
 }
+
+@mixin module-size {
+  width: 100/2*1%;
+  height: 47vw;
+
+  @include breakpoint($bp-small) {
+    width: 100/3*1%;
+    height: 30vw;
+  }
+
+  @include breakpoint($bp-medium) {
+    width: 100/4*1%;
+    height: 20vw;
+  }
+
+  @include breakpoint($bp-large) {
+    width: 100/5*1%;
+    height: 18vw;
+  }
+
+  @include breakpoint($bp-desktop) {
+    width: $module-grid-image-width;
+    height: $module-grid-image-height;
+  }
+}
